Fixed nav expand icon spacing

--- a/src/app/features/navigation/components/nav-sidebar-item/nav-sidebar-item.component.scss
+++ b/src/app/features/navigation/components/nav-sidebar-item/nav-sidebar-item.component.scss
@@ -64,7 +64,10 @@
   border-radius: 50%;
   color: $theme-dark-color;
   cursor: pointer;
+  font-size: 1.5rem;
+  height: 2.5rem;
   padding: 0.5rem;
+  width: 2.5rem;
   @include transition(all);
 
   &:hover {
